--- a/setup.cfg
+++ b/setup.cfg
@@ -21,11 +21,11 @@ python_requires = >=3.8
 install_requires =
     setuptools>=42
     wheel
-    colour-science==0.3.16
-	numpy==1.23.5
-	scipy
-	pynverse
-	matplotlib>=3.3.4
+    colour-science
+    numpy
+    scipy
+    pynverse
+    matplotlib>=3.3.4
     networkx>=2.5
 [options.packages.find]
 where = src
